fix: keyboard description z-index (#1009)

--- a/packages/uhk-web/src/app/components/svg/keyboard/svg-keyboard.component.scss
+++ b/packages/uhk-web/src/app/components/svg/keyboard/svg-keyboard.component.scss
@@ -3,8 +3,16 @@
     width: 100%;
     position: relative;
 }
+
+.svgKeyboard {
+    position: relative;
+    z-index: 50;
+}
+
 editable-text {
     padding-left: 2em;
     padding-right: 2em;
     display: block;
+    position: relative;
+    z-index: 51;
 }
